src/test/deca/context/invalid/test_error_2.5-2.deca
// Description:
//    Soulève l'erreur (2.5)
//
// Resultat:
//    Erreur contextuelle
//    Ligne 13 : Un champ ne peut pas être de type 'void' (2.5)
//
// Historique:
//      cree le 06/01/2022


class A {
    void i=0;
}

